# valigetta

./: .gitignore  .pre-commit-config.yaml  .pre-commit.yaml  README.md  pyproject.toml  setup.cfg  setup.py
.github/workflows/: lint.yaml  run-tests.yaml  test.yaml  update-cov-badge.yaml
docs/: create_alias.md  create_key.md  decrypt.md  decrypt_submission.md  delete_alias.md  describe_key.md  disable_key.md  get_public_key.md  update_key_description.md
requirements/: base.in  dev.in  dev.txt
tests/: conftest.py  test_decryptor.py  test_kms.py  test_utils.py
valigetta/: decryptor.py  exceptions.py  kms.py  utils.py
