[metadata]
name = valigetta
author = Ona Systems Inc.
author_email = tech@ona.io
description = A Python SDK for managing encryption keys and decrypting ODK submissions.
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/onaio/valigetta
license = GNU General Public License v3 (GPLv3)
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: GNU General Public License v3 (GPLv3)
    Operating System :: OS Independent

[options]
packages = find:
python_requires = >=3.10
install_requires =
    boto3 >= 1.37.2, < 2
    cryptography >= 44.0.2, < 45
    pycryptodome >= 3.21.0, < 4
[options.extras_require]
dev =
    pytest
    black
